<resources>
    <string name="app_name">NeWork</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_menu">Menu</string>
    <string name="description_post_views">Views</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="preview_video">preview Video</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="new_posts">New Posts</string>
    <string name="empty_posts">Empty posts</string>
    <string name="add_post">Add post</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="remove">Clear</string>
    <string name="edit_post">Edit Post</string>
    <string name="retry_loading">Reload</string>
    <string name="error_loading">No connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="input_password">Input password</string>
    <string name="select_an_avatar_image">Avatar image</string>
    <string name="account_setup">Account Setup</string>
    <string name="user_name">User name</string>
    <string name="account_id">Account ID</string>
    <string name="users">Usres</string>
    <string name="posts">Posts</string>
    <string name="likers">Likers</string>
    <string name="mentionated">Mentionated</string>
    <string name="jobs">Jobs</string>
    <string name="wall">Wall</string>
    <string name="post">Post</string>
    <string name="add_photo">Photo</string>
    <string name="add_file">File</string>
    <string name="add_users">Users</string>
    <string name="add_geo">Location</string>
    <string name="search_job">Search Job</string>
    <string name="new_post">New Post</string>
    <string name="pic">Picture</string>
    <string name="event">Event</string>
    <string name="new_event">New Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event_date">Data of Event</string>
    <string name="name">Company</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="add">Add</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="select_date">Select date</string>
    <string name="fullscreen_picture">FullScreen picture</string>
    <string name="button_clear_job">button_clear_job</string>
    <string name="duration">...</string>
    <string name="participants">Participants</string>
    <string name="play_video">Play_video</string>
    <string name="speakers">Speakers</string>
    <string name="avatar_speaker">Avatar speaker</string>
    <string name="avatar_user">Avatar user</string>
    <string name="play_audio">Play Audio</string>
    <string name="job_title">Job title</string>
    <string name="experience">Experience</string>
    <string name="enter_dates">ENTER DATES</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="transparent">Transparent lay</string>
    <string name="description_event_participants">Participants</string>
    <string name="count_likes">Count likes</string>
    <string name="audio">AUDIO</string>
    <string name="video">VIDEO</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="description_attach">description attach</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="content">Content</string>
    <string name="cur_time">Now</string>
    <string name="format_date">__.__.____</string>
</resources>